feat: 로그인 기능 구현 #5

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 
 
+jwt.secret-key= sns-application-23.secret_key
+jwt.token.expired-time-ms=2592000000
+# 30 days
