--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.highlight_sql=true
+logging.level.org.hibernate.type.descriptor.sql=trace
 
 
 jwt.secret-key= sns-application-23.secret_key
