--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,29 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#
+#spring.datasource.url=jdbc:h2:mem:project;MODE=MYSQL
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.defer-datasource-initialization=true
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.highlight_sql=true
+#logging.level.org.hibernate.type.descriptor.sql=trace
 
-spring.datasource.url=jdbc:h2:mem:project;MODE=MYSQL
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+spring.datasource.username=soo
+spring.datasource.password=cos0817@
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.highlight_sql=true
-logging.level.org.hibernate.type.descriptor.sql=trace
 
+spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.properties.hibernate.format_sql=true
 
 jwt.secret-key= sns-application-23.secret_key
 jwt.token.expired-time-ms=2592000000
