--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,7 @@ spring.jpa.properties.hibernate.format_sql=true
 jwt.secret-key= sns-application-23.secret_key
 jwt.token.expired-time-ms=2592000000
 # 30 days
+
+spring.redis.host= localhost
+spring.redis.port= 6379
+spring.redis.password= cos0817@
